--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/public/hot
-/public/storage
-/public/css
-/public/js
+# /public/hot
+# /public/storage
+# /public/css
+# /public/js
 /storage/*.key
 .env.backup
 docker-compose.override.yml
